# liballocstool

./: .gitmodules  .hgtags  Makefile.am  README.md  autogen.sh  config.mk.in  configure.ac  liballocstool.pc.in
contrib/: Makefile
include/: allocmeta-defs.h  frame-element.hpp  stickyroot.hpp  uniqtype-defs.h  uniqtype.h  uniqtypes.hpp
lib/: Makefile
src/: allocsites-info.cpp  frame-element.cpp  stickyroot.cpp  uniqtypes.cpp
